2008-07-26  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	Post release version bump

=== 2.15.2 ===
2008-07-26  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am (_gobject_la_SOURCES): Build fix, remove
	extra \

	* examples/gio/directory-async.py:
	* gio/Makefile.am:
	* gio/giomodule.c (init_gio):
	* glib/pyglib.c (pyglib_error_check),
	(pyglib_register_exception_for_domain):
	* glib/pyglib.h:
	* tests/test_gio.py:
	Add a new API for registering exceptions for a GError domain.
	Register a new exception for G_IO_ERROR, update tests
	and examples to use the new exception.

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* glib/pygoptioncontext.c (pyg_option_context_set_main_group),
	(pyg_option_context_add_group):
	Send in a PyObject instead of a PyGOptionGroup object.

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* glib/Makefile.am:
	* glib/glibmodule.c (pyglib_register_constants), (init_glib):
	* glib/option.py:
	* glib/pyglib.c (pyglib_init),
	(pyglib_option_group_transfer_group), (pyglib_option_group_new),
	(pyglib_option_context_new):
	* glib/pyglib.h:
	* glib/pygoptioncontext.c (pyg_option_context_parse),
	(pyg_option_context_set_main_group),
	(pyg_option_context_add_group),
	(pyglib_option_context_register_types):
	* glib/pygoptioncontext.h:
	* glib/pygoptiongroup.c (arg_func),
	(pyglib_option_group_register_types):
	* glib/pygoptiongroup.h:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/gobjectmodule.c (init_gobject):
	* gobject/option.py:
	* gobject/pygobject-private.h:
	* gobject/pygoptioncontext.c:
	* gobject/pygoptiongroup.c:
	Move option over from gobject to glib.

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* tests/common.py:
	* tests/test_conversion.py:
	* tests/test_enum.py:
	* tests/test_interface.py:
	* tests/test_option.py:
	* tests/test_source.py:
	* tests/test_subprocess.py:
	* tests/test_subtype.py:
	* tests/test_thread.py:
	* tests/test_unknown.py: